Closed Bug 86608 Opened 23 years ago Closed 23 years ago

Content-Encoding with space in the end

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: is, Assigned: darin.moz)

References

()

Details

(Whiteboard: [PDT+] ready for checkin)

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/4.73 [en] (X11; I; FreeBSD 4.2-RELEASE i386; Nav)
BuildID:    20010618

Mozilla doesn't understand Content-Encoding with space in the end,
i.e.  and show content gzipped.
Mozilla version is:
Mozilla/5.0 (X11; U; FreeBSD 4.2-RELEASE i386; en-US; rv:0.9.1) Gecko/20010618
The same error is in Windows Netscape 6.1b1.
It seems that Mozilla prior to rv:0.9.1 doesn't has this bug.

Reproducible: Always
Steps to Reproduce:
1. http server must sends header "Content-Encoding: gzip "
2. http server must sends gzipped content
3. look page in Mozilla

Actual Results:  Page would be gzipped.

Expected Results:  Should show ungzippped page.
I assume that trailing whitespace should be eaten on all header entries.
Status: UNCONFIRMED → NEW
Ever confirmed: true
->darin

Why are we only trimming whitespace for the content-type header?
Assignee: neeti → darin
OS: FreeBSD → All
Hardware: PC → All
david: i agree
Priority: -- → P3
Target Milestone: --- → mozilla0.9.2
Attached patch patchSplinter Review
sr=darin
Status: NEW → ASSIGNED
r=bbaetz
Keywords: patch
Priority: P3 → P2
Whiteboard: [PDT+]
Whiteboard: [PDT+] → [PDT+] patched & reviewed
a=tor (on behalf of drivers) for 0.9.2 checkin
Whiteboard: [PDT+] patched & reviewed → [PDT+] patched & reviewed, critical for 0.9.2
Whiteboard: [PDT+] patched & reviewed, critical for 0.9.2 → [PDT+] ready for checkin
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified:  7/23/01 builds branch and trunk, all platforms
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: