Fixes bug 86608 "Content-Encoding with space in the end" patch=deinst@world.std.com, r=bbaetz, sr=darin, a=tor